[gd_scene load_steps=2 format=3 uid="uid://bus2gwr6st2xf"]

[ext_resource type="Script" path="res://core/level/victory_popup.gd" id="1"]

[node name="VictoryPopup" type="Popup"]
size = Vector2i(261, 100)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Level Complete!"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Review"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level-Select"

[node name="NextLevelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Level"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StayButton" to="." method="_on_stay_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
